--- a/content/blog/2020-09-04-cycling-oyster.Rmd
+++ b/content/blog/2020-09-04-cycling-oyster.Rmd
@@ -6,6 +6,7 @@ slug: cycling-oyster
 categories: []
 tags: []
 image: 'img/cycling/p2-annual-1.png'
+aliases: ["/projects/cycling-vs-oyster/"]
 ---
 
 ```{r setup, include = FALSE}
